<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/txvDrug"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:text="@string/beginD"
            android:textSize="@dimen/text_sp3" />

        <ImageButton
            android:id="@+id/ibnCalendar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:src="@drawable/calendar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCycleD10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nDay"
            android:textSize="@dimen/text_sp3" />

        <Button
            android:id="@+id/btnCycleD11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/perD"
            android:textSize="@dimen/text_sp3" />

        <Button
            android:id="@+id/btnCycleD00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/once"
            android:textSize="@dimen/text_sp3" />
    </LinearLayout>


</LinearLayout>
