<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".care.AddDDActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btnCare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:drawableLeft="@drawable/care_drug_m"
            android:gravity="center"
            android:text="@string/care"
            android:textSize="@dimen/text_sp5" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:drawableLeft="@drawable/care_cancel_m"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="@dimen/text_sp5" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:drawableLeft="@drawable/care_ok_m"
            android:gravity="center"
            android:text="@string/save"
            android:textSize="@dimen/text_sp5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnMember"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/member"
                android:textSize="@dimen/text_sp4" />

            <Button
                android:id="@+id/btnMeal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/meal"
                android:textSize="@dimen/text_sp4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCycle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/cycle"
                android:textSize="@dimen/text_sp4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/clock"
                android:textSize="@dimen/text_sp4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/btnDrug"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:text="@string/drug"
                android:textSize="@dimen/text_sp4" />

            <ImageButton
                android:id="@+id/ibnCamera"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:src="@drawable/camera" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
