<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/btnMor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:text="@string/morning"
                android:textSize="@dimen/text_sp4" />

            <ImageButton
                android:id="@+id/ibnEdit1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:src="@drawable/care_edit_s" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/ibnNoon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:text="@string/noon"
                android:textSize="@dimen/text_sp4" />

            <ImageButton
                android:id="@+id/ibnEdit2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:src="@drawable/care_edit_s" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/ibnAfterN"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:text="@string/afternoon"
                android:textSize="@dimen/text_sp4" />

            <ImageButton
                android:id="@+id/ibnEdit3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:src="@drawable/care_edit_s" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/ibnNight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:text="@string/night"
                android:textSize="@dimen/text_sp4" />

            <ImageButton
                android:id="@+id/ibnEdit4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:src="@drawable/care_edit_s" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_dp2"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/perHr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/perHr"
            android:textSize="@dimen/text_sp4" />
    </LinearLayout>

</LinearLayout>